Format all java files